swagger세팅, DTO 변경